trunk/Archive2/e0/035fe8cc08cdf8/output
In file included from main.cpp:3:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/unordered_map:35:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/c++0x_warning.h:32:2: error: This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
#error This file requires compiler and library support for the \
 ^
main.cpp:8:19: error: expected expression
    map_ex.insert({{1,'a'},{2,'b'}});
                  ^
main.cpp:17:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
3 errors generated.
